<resources>
    <string name="app_name">电商</string>

    <string name="bar_name_home">首页</string>
    <string name="bar_name_topic">专题</string>
    <string name="bar_name_sort">分类</string>
    <string name="bar_name_shop">购物车</string>
    <string name="bar_name_me">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">商品搜索,共239款好物</string>
    <string name="live">看直播 赢大奖</string>
    <string name="brand">品牌制造商直供</string>
    <string name="newGoogs">周一周四·新品首发</string>
    <string name="hotgoods">人气推荐</string>
    <string name="topic">专题精选</string>
    <string name="title_hotgood_all">综合</string>
    <string name="title_hotgood_price">价格</string>
    <string name="title_hotgood_sort">分类</string>


    <string name="title_car_specs">请选择规格数量</string>
    <string name="title_car_assess">评价($)</string>
    <string name="title_car_lookall">查看全部</string>


    <string name="tips_error_goodid">错误的商品id</string>
    <string name="tv3">30天无忧退货</string>
    <string name="tv4">48小时快速退款</string>
    <string name="tv5">满88元免邮费</string>

    <string name="text_empty">用户名密码不能为空</string>
    <string name="text_error">用户名密码错误</string>
    <string name="tips_buynumber">请选中购买商品数量</string>

    <string name="tv_left">发生范德萨</string>
    <string name="btn_up">上一页</string>
    <string name="btn_next">下一页</string>
</resources>
