<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">


    <androidx.core.widget.NestedScrollView
        android:layout_marginTop="@dimen/dp_5"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <include layout="@layout/layout_search"/>
            <com.youth.banner.Banner
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_160" />

            <LinearLayout
                android:id="@+id/layout_tab"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </LinearLayout>
            <View
                android:background="@color/gray"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_10"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_brand_title"
                    android:text="@string/brand"
                    android:gravity="center"
                    android:paddingVertical="@dimen/dp_14"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rlv_brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_newgood_title"
                    android:text="@string/newGoogs"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:paddingVertical="@dimen/dp_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rlv_newgood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <View
                android:background="@color/gray"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_10"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_hotgoods_title"
                    android:text="@string/hotgoods"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:paddingVertical="@dimen/dp_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rlv_hotgoods"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <View
                android:background="@color/gray"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_10"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_topic_title"
                    android:text="@string/topic"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:paddingVertical="@dimen/dp_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rlv_topic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/rlv_category"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>